# OOPExercise

./: README.md  Test_N.1.
Task1-3/build-car_warehouse-Desktop-Debug/: qtcsettings.cmake
Task1-3/car_warehouse/: car.h  main.cpp  oop.cpp  warehouse.cpp  warehouse.h
Task4-8/car_warehouse/: CMakeLists.txt  car.cpp  car.h  main.cpp  warehouse.cpp  warehouse.h
build-car_warehouse-Desktop-Debug/: CMakeCache.txt  Makefile  car_warehouse  cmake_install.cmake
build-car_warehouse-Desktop-Debug/car_warehouse_autogen/: moc_predefs.h
car_warehouse/: CMakeLists.txt  main.cpp
src/Task-4/car_warehouse/: oop.h
src/Task1-3/car_warehouse/: main.cpp  oop.cpp  warehouse.cpp  warehouse.h
